--- a/app/layout/core/core.module.css
+++ b/app/layout/core/core.module.css
@@ -103,6 +103,20 @@
   justify-content: flex-start;
   overflow: auto;
 }
+.coreLayout_container > main::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: var(--black);
+}
+.coreLayout_container > main::-webkit-scrollbar {
+  width: 12px;
+  background-color: var(--black);
+}
+.coreLayout_container > main::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 0 2px var(--black);
+  background-color: var(--red);
+}
+
 /* Footer container */
 .coreLayout_container > footer {
   grid-area: footer;
