--- a/app/styles/scrollbars.css
+++ b/app/styles/scrollbars.css
@@ -2,17 +2,17 @@
   /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
   border-radius: 10px;
   /* background-color: #F5F5F5; */
-  background-color: var(--black);
+  background: var(--white, #fff);
 }
 
 ::-webkit-scrollbar {
   width: 12px;
   /* background-color: #F5F5F5; */
-  background-color: var(--black);
+  background-color: var(--white);
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 0 2px var(--black);
+  -webkit-box-shadow: inset 0 0 0 2px var(--white);
   background-color: var(--red);
 }
